--- a/CAweb/index.html
+++ b/CAweb/index.html
@@ -49,7 +49,7 @@
                                         <div class="bg-white rounded shadow-sm py-5 px-4">
                                             <img src="content/user.png" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
                                             <h4 class="mb-0">John Johnson</h5>
-                                            <div class="text-muted">Email: jj@bla.com</div>
+                                            <h6 class="text-muted">Email: jj@bla.com</h6>
                                         </div>
                                         <div>
                                             <button type="submit" class="btn btn-primary">Create New Certificate</button>
