--- a/CAweb/login.html
+++ b/CAweb/login.html
@@ -14,7 +14,7 @@
     <body>
         <div class="sidenav">
             <div class="login-main-text">
-               <h2>iMovie's Certificate Authority<br> Login Page</h2>
+               <h2>iMovie's Certificate Authority</h2>
                <p>Log in with employee user id and password <br> or employee user id and certificate</p>
             </div>
          </div>
