--- a/CAweb/index.html
+++ b/CAweb/index.html
@@ -32,11 +32,11 @@
           <div class="col-sm-8 text-left"> 
 
             <!-- testing -->
-            <!-- <div>
+            <div>
                 <h3>All Users</h3>
                 <div id="users">
                 </div>
-            </div>  -->
+            </div> 
            
             <div class="container bootstrap snippets bootdeys">
                 <div class="row">
