--- a/CAweb/index.html
+++ b/CAweb/index.html
@@ -31,13 +31,14 @@
           <!-- center page -->
           <div class="col-sm-8 text-left"> 
 
-            <!-- testing -->
+            <!-- testing get all users -->
+            <!--
             <div>
                 <h3>All Users</h3>
                 <div id="users">
                 </div>
             </div> 
-           
+           -->
             <div class="container bootstrap snippets bootdeys">
                 <div class="row">
                   <div class="col-xs-12 col-sm-9">
@@ -48,8 +49,8 @@
                                     <div class="row text-center">
                                         <div class="bg-white rounded shadow-sm py-5 px-4">
                                             <img src="content/user.png" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-                                            <h4 class="mb-0">John Johnson</h5>
-                                            <h6 class="text-muted">Email: jj@bla.com</h6>
+                                            <h4 id="user-name" class="mb-0"></h4>
+                                            <h6 id="user-email" class="text-muted"></h6>
                                         </div>
                                         <div>
                                             <button type="submit" class="btn btn-primary">Create New Certificate</button>
@@ -150,8 +151,5 @@
     <script src="js/app.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-        getUsers();
-    </script>
 </body>
 </html>
