--- a/CAweb/login.html
+++ b/CAweb/login.html
@@ -6,10 +6,9 @@
         <title>login</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" id="bootstrap-css">
         <link rel="stylesheet" href="css/loginStyles.css" />
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="js/app.js"></script>
+        <script src="js/login.js"></script>
     </head>
     <body>
         <div class="sidenav">
@@ -30,7 +29,7 @@
                         <label>Password</label>
                         <input type="password" class="form-control" placeholder="Password">
                      </div>
-                     <button type="submit" class="btn btn-black">Login</button>
+                     <button id="log-in-button" type="submit" class="btn btn-black">Login</button>
                   </form>
                </div>
             </div>
