--- a/CAweb/login.html
+++ b/CAweb/login.html
@@ -23,13 +23,13 @@
                   <form>
                      <div class="form-group">
                         <label>Employee user id</label>
-                        <input type="text" class="form-control" placeholder="Employee user id">
+                        <input id="user-id" type="text" class="form-control" placeholder="Employee user id">
                      </div>
                      <div class="form-group">
                         <label>Password</label>
-                        <input type="password" class="form-control" placeholder="Password">
+                        <input id="user-password" type="password" class="form-control" placeholder="Password">
                      </div>
-                     <button id="log-in-button" type="submit" class="btn btn-black">Login</button>
+                     <button id="log-in-button" type="button" class="btn btn-black">Login</button>
                   </form>
                </div>
             </div>
