--- a/CAweb/index.html
+++ b/CAweb/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-inverse">
@@ -95,13 +96,13 @@
                           <div class="form-group">
                             <label class="col-sm-2 control-label">First name</label>
                             <div class="col-sm-10">
-                              <input type="text" class="form-control">
+                              <input type="text" class="form-control" id="change-first-name">
                             </div>
                           </div>
                           <div class="form-group">
                             <label class="col-sm-2 control-label">Last name</label>
                             <div class="col-sm-10">
-                              <input type="text" class="form-control">
+                              <input type="text" class="form-control" id="change-last-name">
                             </div>
                           </div>
                           <div class="form-group">
