--- a/CAweb/user.html
+++ b/CAweb/user.html
@@ -123,18 +123,18 @@
                           <div class="form-group">
                             <label class="col-sm-2 control-label">Current password</label>
                             <div class="col-sm-10">
-                              <input type="password" class="form-control">
+                              <input type="password" class="form-control" id="change-password">
                             </div>
                           </div>
                           <div class="form-group">
                             <label class="col-sm-2 control-label">New password</label>
                             <div class="col-sm-10">
-                              <input type="password" class="form-control">
+                              <input type="password" class="form-control" id="change-new-password">
                             </div>
                           </div>
                           <div class="form-group">
                             <div class="col-sm-10 col-sm-offset-2">
-                              <button type="submit" class="btn btn-primary">Submit</button>
+                              <button type="submit" class="btn btn-primary" id="submit-password-change">Submit</button>
                               <button type="reset" class="btn btn-default">Cancel</button>
                             </div>
                           </div>
