--- a/CAweb/user.html
+++ b/CAweb/user.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>iMovie's CA</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/styles.css" />
@@ -23,7 +22,10 @@
           </div>
         </div>
       </nav>
-        
+      <!-- Error alert container -->
+      <div id="error-alert" class="alert alert-danger alert-fixed fade"></div>
+      <div id="success-alert" class="alert alert-success alert-fixed fade"></div>
+
       <div class="container-fluid text-center">    
         <div class="row content">
           <!-- left column -->
